# AI-Newsletter-Generator

./: LICENSE  Project-Implementation-Guide.ipynb  README.md  pyproject.toml
logs/: 2024-06-26_17-26-55_research_task.md  2024-06-26_18-19-40_edit_task.md  2024-06-26_18-19-40_newsletter_task.html  2024-06-26_18-19-40_research_task.md
src/gui/: app.py
src/newsletter_crew/: crew.py  main.py
src/newsletter_crew/config/: agents.yaml  newsletter_template.html  tasks.yaml
src/newsletter_crew/tools/: research.py
